test/conformance/chainsaw/generate-validating-admission-policy/clusterpolicy/standard/generate/cpol-any-match-resources-by-names/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-label-app-4
spec:
  rules:
    - name: check-label-app
      match:
        any:
        - resources:
            kinds:
            - Pod
            - Deployment
            names: 
            - "staging"
      validate:
        validationFailureAction: Audit
        cel:
          expressions:
            - expression: "'app' in object.metadata.labels"
