test/conformance/chainsaw/generate-validating-admission-policy/clusterpolicy/standard/generate/cpol-any-match-resources-by-names/validatingadmissionpolicy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: kyverno
    reports.kyverno.io/enabled: "true"
  name: cpol-check-label-app-4
  ownerReferences:
  - apiVersion: kyverno.io/v1
    kind: ClusterPolicy
    name: check-label-app-4
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:
      - ""
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resourceNames:
      - staging
      resources:
      - pods
      - pods/ephemeralcontainers
    - apiGroups:
      - apps
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resourceNames:
      - staging
      resources:
      - deployments
  validations:
  - expression: "'app' in object.metadata.labels"
