test/conformance/chainsaw/generate-validating-admission-policy/clusterpolicy/standard/generate/cpol-any-match-resources-by-names/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-label-app-4
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
  validatingadmissionpolicy:
    generated: true
